# BlockStability

./: CMakeLists.txt  README.md
cmake/: FindGUROBI.cmake
data/block/: Untitled.3dm  bridge.mtl  igloo.objbak  rulin.3dm  rulin.3dmbak  rulin.mtl  rulin.objbak  single_bridge.objbak  slider.mtl
data/block/stool/: part05.stl
data/graph/: bridge.dot  bridge_state.dot  single_brdige_state.dot  single_bridge.dot  single_bridge_state.dot
data/robots/irb4600/: irb4600.urdf  irb4600_default_state.json
data/robots/irb4600/meshes/: IRB4600.mtl
data/robots/ur5e/: ur5e.urdf
ext/: CMakeLists.txt
ext/tinyxml2/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/RobotViewer/: CMakeLists.txt  main.cpp
src/apps/SequenceGenerator/: CMakeLists.txt  main.cpp  surface_mesh_custom_select.h
src/apps/StructureAnalyzer/: CMakeLists.txt  main.cpp  surface_mesh_custom_select.h
src/apps/assemblyBlock/: CMakeLists.txt  file_dialog_open.h  main.cpp
src/libs/: CMakeLists.txt
src/libs/RigidBlock/: CMakeLists.txt
src/libs/RigidBlock/include/RigidBlock/: Analyzer.h  Assembly.h  Part.h
src/libs/RigidBlock/include/RigidBlock/util/: ConvexHull2D.h
src/libs/RigidBlock/src/: Analyzer.cpp  Assembly.cpp  Part.cpp
src/libs/RigidBlock/src/util/: PolyPolyBoolean.cpp  clipper.cpp  readOBJ.cpp
src/libs/block/: CMakeLists.txt
src/libs/block/include/block/: Block.h  BlockAssembly.h  ContactGraphForce.h  PolyPolyBoolean.h  readOBJ.h
src/libs/block/src/: Block.cpp  BlockAssembly.cpp  ContactGraphForce.cpp  PolyPolyBoolean.cpp  clipper.cpp  readOBJ.cpp
src/libs/render/: CMakeLists.txt
src/libs/render/include/render/: AssemblyRender.h  BlockSelect.h  RobotRender.h  file_dialog_open.h
src/libs/render/src/: AssemblyRender.cpp  BlockSelect.cpp  RobotRender.cpp
src/libs/rigid_block/: CMakeLists.txt
src/libs/rigid_block/include/rigid_block/: Analyzer.h  Assembly.h  Part.h
src/libs/rigid_block/include/rigid_block/util/: PolyPolyBoolean.h  readOBJ.h
src/libs/rigid_block/src/: Analyzer.cpp  Assembly.cpp  Part.cpp
src/libs/rigid_block/src/util/: PolyPolyBoolean.cpp  clipper.cpp  readOBJ.cpp
src/libs/robot/: CMakeLists.txt
src/libs/robot/include/robot/: Robot.h  collision.h  readOBJ.h  util.h
src/libs/robot/src/: Robot.cpp  ikfast_robot.cpp  readOBJ.cpp
src/libs/scene/: CMakeLists.txt
src/libs/scene/include/scene/: Scene.h
src/libs/scene/src/: Scene.cpp
src/libs/search/: CMakeLists.txt
src/libs/search/backup/: SearchAlgorithmBeamSearch.cpp  SearchAlgorithmBeamSearch.h  SearchGenerator.h  StateGraphGenerator.cpp  StateGraphHolding.cpp  StateGraphHolding.h  SubsetTree.h
src/libs/search/include/search/: AssemblySequence.h  PartGraph.h  SearchAlgorithm.h  SearchAlgorithmBeamSearch.h  SearchConstraints.h  SearchGenerator.h  SearchGraph.h  StateGraph.h  StateGraphConstraints.h  StateGraphGenerator.h  StateGraphHolding.h
src/libs/search/src/: PartGraph.cpp  SearchAlgorithm.cpp  SearchAlgorithmBeamSearch.cpp  SearchConstraints.cpp  SearchGenerator.cpp  SearchGraph.cpp  StateGraph.cpp  StateGraphConstraints.cpp  StateGraphGenerator.cpp  StateGraphHolding.cpp  SubsetTree.cpp
src/libs/util/: CMakeLists.txt
src/libs/util/include/util/: ConvexCluster.h  PolyPolyBoolean.h  Transform.h  readOBJ.h
src/libs/util/src/: ConvexCluster.cpp  PolyPolyBoolean.cpp  clipper.cpp  readOBJ.cpp
